# warragamba-blogpost

./: README.md  multi_day_model.ipynb  pyproject.toml  warragamba.ipynb  warragamba.livemd
blogpost/: From Python to Elixir A Machine Learning Case Stud 57b3db3c10764aad947b93dffe652ce2.md
datasets/: cox_and_wollon_stream_level_2008-2022.csv  rainfall_within_0.2_lat_degrees_of_warragamba_dam_2008_2022.csv  warragamba_dam_level_raw_2008_2022.csv
