[tool.poetry]
name = "warragamba-blogpost"
version = "0.1.0"
description = "A prototype model to predict warragamba damm flow delta based on water catchment  rainfall."
license = "Proprietary"
authors = ["chrishop <chris@alembic.com.au>"]
repository = "https://github.com/team-alembic/warragamba-blogpost"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
numpy = "^1.24.0"
tensorflow = "^2.11.0"
requests = "^2.28.1"
altair-saver = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
altair = "^4.2.0"
jupyter = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
